--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+*
+/storage/framework/views/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/logs/*
+storage_app_public.prod.bak/
